--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@guilhermemj/micro-web-server",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A simple and opinionated web server powered by express",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "start": "npm run build:watch",
     "build": "tsc",
@@ -11,6 +14,10 @@
     "lint": "eslint src/ --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:guilhermemj/micro-web-server.git"
   },
   "keywords": [
     "microservices",
