fix: Fix license in package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express"
   ],
   "author": "Guilherme Jacomini <guilhermem.j@hotmail.com>",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/guilhermemj/micro-web-server/issues"
   },
